@@ -1,13 +1,13 @@
 
 ##' add tip point
 ##'
-##' 
+##'
 ##' @title geom_tippoint
 ##' @inheritParams geom_point2
 ##' @return tip point layer
 ##' @export
 ##' @author Guangchuang Yu
-geom_tippoint <- function(mapping = NULL, data = NULL, 
+geom_tippoint <- function(mapping = NULL, data = NULL,
                        position = "identity", na.rm = FALSE,
                           show.legend = NA, inherit.aes = TRUE, ...) {
     isTip <- NULL
@@ -17,18 +17,18 @@ geom_tippoint <- function(mapping = NULL, data = NULL,
     } else {
         mapping %<>% modifyList(self_mapping)
     }
-    geom_point2(mapping, data, position, na.rm, show.legend, inherit.aes, ...)    
+    geom_point2(mapping, data, position, na.rm, show.legend, inherit.aes, ...)
 }
 
 ##' add node point
 ##'
-##' 
+##'
 ##' @title geom_nodepoint
 ##' @inheritParams geom_point2
 ##' @return node point layer
 ##' @export
 ##' @author Guangchuang Yu
-geom_nodepoint <- function(mapping = NULL, data = NULL, 
+geom_nodepoint <- function(mapping = NULL, data = NULL,
                        position = "identity", na.rm = FALSE,
                        show.legend = NA, inherit.aes = TRUE, ...) {
     isTip <- NULL
@@ -38,19 +38,19 @@ geom_nodepoint <- function(mapping = NULL, data = NULL,
     } else {
         mapping %<>% modifyList(self_mapping)
     }
-    geom_point2(mapping, data, position, na.rm, show.legend, inherit.aes, ...)    
+    geom_point2(mapping, data, position, na.rm, show.legend, inherit.aes, ...)
 }
 
 
 ##' add root point
 ##'
-##' 
+##'
 ##' @title geom_rootpoint
 ##' @inheritParams geom_point2
 ##' @return root point layer
 ##' @export
 ##' @author Guangchuang Yu
-geom_rootpoint <- function(mapping = NULL, data = NULL, 
+geom_rootpoint <- function(mapping = NULL, data = NULL,
                            position = "identity", na.rm = FALSE,
                            show.legend = NA, inherit.aes = TRUE, ...) {
     isTip <- node <- parent <- NULL
@@ -66,7 +66,7 @@ geom_rootpoint <- function(mapping = NULL, data = NULL,
 
 ##' geom_point2 support aes(subset) via setup_data
 ##'
-##' 
+##'
 ##' @title geom_point2
 ##' @param mapping aes mapping
 ##' @param data data
@@ -85,14 +85,14 @@ geom_point2 <- function(mapping = NULL, data = NULL,
                        position = "identity", na.rm = FALSE,
                        show.legend = NA, inherit.aes = TRUE, ...) {
 
-    
+
     default_aes <- aes_(node=~node)
     if (is.null(mapping)) {
         mapping <- default_aes
     } else {
         mapping <- modifyList(mapping, default_aes)
     }
-    
+
     layer(
         data = data,
         mapping = mapping,
@@ -116,14 +116,16 @@ GeomPointGGtree <- ggproto("GeomPointGGtree", GeomPoint,
                                if (is.null(data$subset))
                                    return(data)
                                data[data$subset,]
-                           }  ## ,
-                           
+                           }
+
+                           ## ,
+
                            ## draw_panel = function(data, panel_scales, coord, na.rm = FALSE){
                            ##     GeomPoint$draw_panel(data, panel_scales, coord, na.rm)
                            ## },
-                           
+
                            ## draw_key = draw_key_point,
-                           
+
                            ## required_aes = c("x", "y"),
                            ## default_aes = aes(shape = 19, colour = "black", size = 1.5, fill = NA,
                            ##                   alpha = NA, stroke = 0.5)
