@@ -1,6 +1,6 @@
 ##' geom_text2 support aes(subset) via setup_data
 ##'
-##' 
+##'
 ##' @title geom_text2
 ##' @param mapping the aesthetic mapping
 ##' @param data A layer specific dataset -
@@ -29,17 +29,17 @@ geom_text2 <- function(mapping = NULL, data = NULL,
         if (!missing(position)) {
             stop("Specify either `position` or `nudge_x`/`nudge_y`", call. = FALSE)
         }
-        
+
         position <- position_nudge(nudge_x, nudge_y)
     }
-    
+
     default_aes <- aes_(node=~node)
     if (is.null(mapping)) {
         mapping <- default_aes
     } else {
         mapping <- modifyList(mapping, default_aes)
     }
-    
+
     layer(
         data = data,
         mapping = mapping,
@@ -66,16 +66,19 @@ GeomTextGGtree <- ggproto("GeomTextGGtree", GeomText,
                                   return(data)
                               data[data$subset,]
                           },
+                          ## compute_group = function(data, params) {
+                          ##     data
+                          ## },
                           draw_panel = function(data, panel_scales, coord, parse = FALSE,
                               na.rm = TRUE, check_overlap = FALSE) {
                               GeomText$draw_panel(data, panel_scales, coord, parse,
                                                   na.rm, check_overlap)
                           },
                           required_aes = c("node", "x", "y", "label"),
-                          
+
                           default_aes = aes(colour = "black", size = 3.88, angle = 0, hjust = 0.5,
                               vjust = 0.5, alpha = NA, family = "", fontface = 1, lineheight = 1.2),
-                          
+
                           draw_key = draw_key_text
                           )
 
